--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^14.14.10",
     "@types/ramda": "^0.27.32",
     "ts-node": "^9.0.0",
     "tsc": "^1.20150623.0",
